# claude-voice

./: .gitignore  pyproject.toml
launchd/: voice-arbiter.plist  voice-mic-watcher.plist  voice-stt-macos.plist  voice-tts.plist
lib/: audio.py  constants.py  tts.py
scripts/: cv_toggle.py  install_macos.sh  mic_watcher.py  stt_macos.py  tts_daemon.py  tts_test_macos.py  voice_arbiter.py
scripts/helpers/: mic_check.swift  stt_listen.swift
